--- a/resources/jquery.contextmenu/jquery.contextMenu.css
+++ b/resources/jquery.contextmenu/jquery.contextMenu.css
@@ -1,50 +1,51 @@
 /* Generic context menu styles */
-.contextMenu {
+.contextMenu{
 	position: absolute;
-	width: 120px;
-	z-index: 99999;
-	border: solid 1px #CCC;
-	background: #EEE;
-	padding: 0px;
-	margin: 0px;
-	display: none;
+	z-index:99999;
+	display:none;
+	margin:0;
+	padding:0;
+	width:120px;
+	border:solid 1px #ccc;
 }
 
-.contextMenu LI {
-	list-style: none;
-	padding: 0px;
-	margin: 0px;
+.contextMenu li{
+	list-style:none;
+	padding:0;
+	margin:0;
 }
 
-.contextMenu A {
-	color: #333;
-	text-decoration: none;
-	display: block;
-	line-height: 20px;
-	height: 20px;
-	background-position: 6px center;
-	background-repeat: no-repeat;
-	outline: none;
-	padding: 1px 5px;
-	padding-left: 28px;
+.contextMenu a{
+	color:#333;
+	display:block;
+	padding:1px 5px 1px 28px;
+	height:20px;
+	text-decoration:none;
+	line-height:20px;
+	background-position:6px center;
+	background-repeat:no-repeat;
+	background-color:#eee;
+	background-color:rgba(238, 238, 238, 0.9);
+	outline:none;
 }
 
-.contextMenu LI.hover A {
-	color: #FFF;
-	background-color: #3399FF;
+.contextMenu li.hover a{
+	color:#fff;
+	background-color:#3399ff;
+	background-color:rgba(51, 153, 255, 0.9);
 }
 
-.contextMenu LI.disabled A {
-	color: #AAA;
-	cursor: default;
+.contextMenu li.disabled a{
+	color:#aaa;
+	cursor:default;
 }
 
-.contextMenu LI.hover.disabled A {
-	background-color: transparent;
+.contextMenu li.hover.disabled a{
+	background-color:transparent;
 }
 
-.contextMenu LI.separator {
-	border-top: solid 1px #CCC;
+.contextMenu li.separator{
+	border-top:solid 1px #ccc;
 }
 
 /*
@@ -53,10 +54,10 @@
 	You can add icons to the context menu by adding
 	classes to the respective LI element(s)
 */
-
-.contextMenu LI.edit A { background-image: url(images/page_white_edit.png); }
-.contextMenu LI.cut A { background-image: url(images/cut.png); }
-.contextMenu LI.copy A { background-image: url(images/page_white_copy.png); }
-.contextMenu LI.paste A { background-image: url(images/page_white_paste.png); }
-.contextMenu LI.delete A { background-image: url(images/page_white_delete.png); }
-.contextMenu LI.quit A { background-image: url(images/door.png); }
+.contextMenu li.edit a{ background-image:url(images/page_white_edit.png); }
+.contextMenu li.cut a{ background-image:url(images/cut.png); }
+.contextMenu li.copy a{ background-image:url(images/page_white_copy.png); }
+.contextMenu li.paste a{ background-image:url(images/page_white_paste.png); }
+.contextMenu li.delete a{ background-image:url(images/page_white_delete.png); }
+.contextMenu li.quit a{ background-image:url(images/door.png); }
+.contextMenu li.save a{ background-image:url(images/save.png); }
